<resources>
    <string name="app_name">°$ Conversion</string>
    <string name="action_settings">Settings</string>
    <string name="title_main_activity_for_temp">Temp Converter</string>
    <string name="title_activity_celsius_to__fahrenheit">Celsius to Fahrenheit</string>
    <string name="title_activity_fahrenheit_to__celsius">Fahrenheit to Celsius</string>
    <string name="title_activity_celsius_to__kelvin">Celsius to Kelvin</string>
    <string name="title_activity_kelvin_to__celsius">Kelvin to Celsius</string>
    <string name="title_activity_kelvin_to__fahrenheit">Kelvin to Fahrenheit</string>
    <string name="title_activity_fahrenheit_to__kelvin">Fahrenheit to Kelvin</string>

    <string name="convert">CONVERT</string>


    <string name="update_exchange_rate">Update Exchange Rate</string>
    <string name="display_exchange_rate">Display Exchange Rate</string>
    <string name="text_view_id">text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="button_label">convert</string>
    <string name="folder_name">com.jr.poliv.temperatureconverter</string>
    <string name="file_name">com.jr.poliv.temperatureconverter.Exchange_Rate</string>
    <string name="title_activity_main">Currency Converter</string>
    <string name= "date_last_updated">date last updated</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="days_till_next_currency_check">10</string>
    <string name="jmd_key">JMD</string>
    <string name="usd_key">USD</string>
    <string name="first_currency">currency1</string>
    <string name="second_currency">currency2</string>
    <string name="boj_rss_feed_url">https://boj.org.jm/feed/?feed=fxrates</string>
    <string name="currency_api_url">http://data.fixer.io/api/latest?access_key=90fb7ac8a78ad68ec1f6636c1317e439</string>

    <string name="error_getting_rates">Error getting exchange rates. Please inform developer</string>
    <string name="success">Success</string>
</resources>
