<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jr.poliv.temperatureconverter.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_celsius_to__fahrenheit"
        android:id="@+id/C_to_F"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_fahrenheit_to__celsius"
        android:id="@+id/F_to_C"
        android:layout_alignTop="@+id/C_to_F"
        android:layout_alignParentEnd="true"  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_celsius_to__kelvin"
        android:id="@+id/C_to_K"
        android:layout_below="@+id/C_to_F"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_kelvin_to__celsius"
        android:id="@+id/K_to_C"
        android:layout_alignTop="@+id/C_to_K"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_kelvin_to__fahrenheit"
        android:id="@+id/K_to_F"
        android:layout_below="@+id/C_to_K"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_fahrenheit_to__kelvin"
        android:id="@+id/F_to_K"
        android:layout_alignTop="@+id/K_to_F"
        android:layout_alignParentEnd="true" />
</RelativeLayout>

